[tool.poetry]
name = "aiomisc"
# This is a dummy version which will be rewritten with poem-plugins
version = "17.5.25"
description = "aiomisc - miscellaneous utils for asyncio"
authors = ["Dmitry Orlov <me@mosquito.su>"]
readme = "README.rst"
license = "MIT"
homepage = "https://github.com/aiokitchen/aiomisc"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: System :: Logging",
    "Topic :: System",
    "Topic :: Utilities",
    "Typing :: Typed",
]
packages = [
    { include = "aiomisc" },
    { include = "aiomisc_log" },
    { include = "aiomisc_worker" },
]

[tool.poetry.urls]
"Source" = "https://github.com/aiokitchen/aiomisc"
"Tracker" = "https://github.com/aiokitchen/aiomisc/issues"
"Changelog" = "https://github.com/aiokitchen/aiomisc/blob/master/CHANGELOG.md"
"Documentation" = "https://aiomisc.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.8"
aiocarbon = { version = "^0.15", optional = true }
aiohttp = { version = ">3", optional = true }
aiohttp-asgi = { version = "^0.5.2", optional = true }
colorlog = "^6.0"
croniter = { version = "2.0", optional = true }
grpcio = { version = "^1.56", optional = true }
grpcio-tools = { version = "^1.56", optional = true }
grpcio-reflection = { version = "^1.56", optional = true }
logging-journald = [{ version = '*', platform = 'linux' }]
raven = { version = "*", optional = true }
rich = { version = "*", optional = true }
setuptools = [{ version = '*', python = "< 3.8" }]
typing_extensions = [{ version = '*', python = "< 3.10" }]
uvloop = { version = ">=0.19, <1", optional = true }
uvicorn = { version = "^0.27", optional = true }
asgiref = { version = "^3.7", optional = true }
dnslib = { version = "^0.9", optional = true }

[tool.poetry.group.dev.dependencies]
aiocarbon = "^0.15.3"
aiohttp = "^3.9.5"
aiohttp-asgi = "~0.5.2"
aiomisc-pytest = "^1.0.8"
asgiref = "^3.7"
async-timeout = "^4.0.2"
autodoc = "^0.5.0"
autoflake = "1.4"
certifi = "^2024.6.2"
collective-checkdocs = "^0.2"
coveralls = "^3.3.1"
croniter = "^2.0"
dnslib = "^0.9"
fastapi = "^0.110"
furo = "^2022"
grpc-stubs = "^1.53.0.2"
grpcio = "^1.64"
grpcio-reflection = "^1.64"
grpcio-tools = "^1.64"
mypy = "^1.9"
pre-commit = "^2.20.0"
pylama = "^8.4.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-freezegun = "^0.4.2"
pytest-rst = ">=0.0.7"
pytest-subtests = "^0.9.0"
raven = "^6.10.0"
rich = "^12.6"
setproctitle = "^1.3"
sphinx = ">=3.5.1"
sphinx-autobuild = "^2021.3.14"
sphinx-intl = "^2.0"
timeout-decorator = "^0.5.0"
types-croniter = "^1.3"
types-setuptools = "^65.6.0.1"
uvicorn = "^0.27"
pytest-rerunfailures = "^14.0"

[tool.poetry.group.uvloop.dependencies]
uvloop = "^0.19.0"

[tool.poetry.extras]
aiohttp = ["aiohttp"]
asgi = ["aiohttp-asgi"]
carbon = ["aiocarbon"]
cron = ["croniter"]
dns = ["dnslib"]
grpc = ["grpcio", "grpcio-tools", "grpcio-reflection"]
raven = ["aiohttp", "raven"]
rich = ["rich"]
uvicorn = ["uvicorn", "asgiref"]
uvloop = ["uvloop"]

[tool.poetry.plugins.aiomisc]
systemd_watchdog = "aiomisc.service.sdwatchdog"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poem-plugins.version]
provider = "git"
update_pyproject = true
write_version_file = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "aiomisc",
    "aiomisc_log",
    "aiomisc_worker",
    "tests",
]

[[tool.mypy.overrides]]
module = "aiomisc.service.dns.records"
check_untyped_defs = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
