[project]
name = "aiomisc"
dynamic = ["version"]
description = "aiomisc - miscellaneous utils for asyncio"
authors = [{ name = "Dmitry Orlov", email = "me@mosquito.su" }]
readme = "README.rst"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: System :: Logging",
    "Topic :: System",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "colorlog>=6.0,<7",
    "logging-journald; platform_system == 'Linux'",
    "typing_extensions; python_version < '3.12'",
]

[project.urls]
Homepage = "https://github.com/aiokitchen/aiomisc"
Source = "https://github.com/aiokitchen/aiomisc"
Tracker = "https://github.com/aiokitchen/aiomisc/issues"
Changelog = "https://github.com/aiokitchen/aiomisc/blob/master/CHANGELOG.md"
Documentation = "https://docs.aiomisc.com/"

[project.optional-dependencies]
aiohttp = ["aiohttp>3"]
asgi = ["aiohttp-asgi>=0.5.2"]
carbon = ["aiocarbon>=0.15"]
cron = ["croniter>=2.0,<3"]
dns = ["dnslib>=0.9"]
grpc = ["grpcio>=1.56", "grpcio-tools>=1.56", "grpcio-reflection>=1.56"]
raven = ["aiohttp>3", "raven"]
rich = ["rich"]
uvicorn = ["uvicorn>=0.27", "asgiref>=3.7"]
uvloop = ["uvloop>=0.21,<1"]

[project.entry-points.aiomisc]
systemd_watchdog = "aiomisc.service.sdwatchdog"

[dependency-groups]
dev = [
    "aiocarbon>=0.15.3",
    "aiohttp>=3.11",
    "aiohttp-asgi~=0.5.2",
    "aiomisc-pytest>=1.0.8",
    "asgiref>=3.7",
    "async-timeout>=4.0.2",
    "autodoc>=0.5.0",
    "certifi>=2024.6.2",
    "collective-checkdocs>=0.2",
    "coveralls>=3.3.1",
    "croniter>=2.0,<3",
    "dnslib>=0.9",
    "fastapi>=0.110",
    "furo>=2022",
    "grpc-stubs>=1.53.0.2",
    "grpcio>=1.64",
    "grpcio-reflection>=1.64",
    "grpcio-tools>=1.64",
    "mypy>=1.9",
    "pre-commit>=2.20.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-freezegun>=0.4.2",
    "pytest-rst>=0.0.7",
    "pytest-subtests>=0.9.0",
    "pytest-rerunfailures>=14.0",
    "raven>=6.10.0",
    "rich>=12.6",
    "ruff>=0.8",
    "setproctitle>=1.3",
    "sphinx>=3.5.1",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-intl>=2.0",
    "sphinxcontrib-googleanalytics>=0.4",
    "timeout-decorator>=0.5.0",
    "types-croniter>=1.3",
    "types-setuptools>=65.6.0.1",
    "uvicorn>=0.27",
]
uvloop = ["uvloop>=0.21"]

[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aiomisc*"]


[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = [
    "aiomisc",
    "aiomisc_log",
    "aiomisc_worker",
    "tests",
]

[[tool.mypy.overrides]]
module = "aiomisc.service.dns.records"
check_untyped_defs = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["uvloop", "uvloop.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
warn_unused_ignores = false

[tool.ruff]
line-length = 80
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E252",   # missing whitespace around parameter equals
    "E731",   # do not assign a lambda expression
    "F401",   # imported but unused (handled selectively)
    "F841",   # local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["F401", "F811", "F821", "UP"]
"examples/*" = ["F401", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.coverage.run]
branch = true
omit = [
    "*/env*/*",
    "*/tests/*",
    "*/.*/*",
]
